fix doctordao